--- a/anketa.html
+++ b/anketa.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonanketa">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div id="fontextanketa">
 <H1>Анкета</H1><br>
 <form>
