--- a/ekonomika.html
+++ b/ekonomika.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonekonomika">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Економіка</i></font></H2>
 <p>Основна галузь економіки міста — промисловість: газовидобувна (представлена підприємством <u>Укргазвидобування</u>), <br> 
