--- a/geografia.html
+++ b/geografia.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fongeografia">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Географія й основні відомості</i></font></H2>
 <p><u>Красноград</u> стоїть на правому березі річки <u>Берестової</u> за 101 км на південний захід від обласного центру — <u>м. Харкова</u>. На противному березі лежить село <u>Наталине</u>,<br> з містом з північного боку межує село <u>Піщанка</u>. Через місто проходять автомобільна дорога М18 (E105) та залізничні лінії на <u>Дніпро, Харків, Полтаву, Лозову</u>, залізнична станція <u>Красноград</u>.</p>
