--- a/istoria.html
+++ b/istoria.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonistoria">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Історія</i></font></H2>
 <p>Місто засноване як <u>Бєльовськ</u> — десята фортеця у складі Української лінії оборонних зміцнень в <font color="red"><b>1731—1733 роках</b></font>, що проходила від <u>Дніпра</u> до <u>Сіверського Дінця</u>.</p>
