--- a/istoria.html
+++ b/istoria.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 </head>
-<body id="fon/fonistoria">
+<body id="fon/fonistoria.jpg">
 <img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Історія</i></font></H2>
