--- a/personi.html
+++ b/personi.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonpersoni">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Персоналії, пов'язані з містом</i></font></H2>
 <UL type = "square">
