--- a/social.html
+++ b/social.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonsocial">
-<img src="header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Соціальна сфера і культура</i></font></H2>
 <table align="center" border="1" cellpadding="0" cellspacing="0">
