--- a/Zalik.html
+++ b/Zalik.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 </head>
-<body id="fonzalik">
+<body id="fonzalik.jpg">
 <img src="img/header.jpg" width=100%" class="header">
 <div class="fontext">
 <H2 align="center"><font color="green"><i>Красноград</i></font></H2>
