--- a/anketa.html
+++ b/anketa.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="fonanketa">
-<img src="img/header.jpg" width=100%" class="header">
+<img src="img/header.jpg" width="100%" class="header">
 <div id="fontextanketa">
 <H1>Анкета</H1><br>
 <form>
@@ -63,8 +63,8 @@
 <input type="checkbox" name="hobby" >Подорожі
 <br><br>
 <button onclick="alert('Дякуємо за заповнення анкети!')">Завантажити</button>
-<br><br>
-<a href="Zalik.html">Назад</a>
+</fieldset>
+</form>
 </div>
 <div class="menu">
 <a href="geografia.html">Географія й основні відомості</a>
