--- a/anketa.html
+++ b/anketa.html
@@ -10,118 +10,79 @@
 <img src="img/header.jpg" width="100%" class="header">
 <div id="fontextanketa">
 <H1>Анкета</H1><br>
-<form>
-<fieldset>
-<legend>Місто та я</legend>
-1. Чи давно ви живете в цьому місті?
-<br>
-    <select name="misto" >
-        <option value="1m"> 5 років</option>
-        <option value="2m"> 7 років</option>
-        <option value="3m"> 10 років</option>
-        <option value="4m"> 11-16 років</option>
+<form name="anketa" method="POST" data-netlify="true" onsubmit="submitForm(event)">
+  <fieldset>
+    <legend>Місто та я</legend>
+    1. Чи давно ви живете в цьому місті?
+    <br>
+    <select name="misto">
+      <option value="1m"> 5 років</option>
+      <option value="2m"> 7 років</option>
+      <option value="3m"> 10 років</option>
+      <option value="4m"> 11-16 років</option>
     </select>
-<br><br> 
-2. Введіть Стать 
-<br>
-<input type="radio" name="pol" checked value="Ch">  Чол. 
-<input type="radio" name="pol" value="J">  Жін.
-<br><br>
-3. Як ви добираєтеся до школи? 
-<br>
-    <select name="doroga" >
-        <option value="1d">Пішки</option>
-        <option value="2d">Автобус</option>
-        <option value="3d">Тролейбус</option>
-        <option value="4d">Маршрутка</option>
-        <option value="5d">Машина</option>
-	</select>
-<br><br>
-4. Який фільм в останній раз ви дивилися та у якому кінотеатрі?
-(Введіть відповідь)
-<br>
-<input type="text" name="kino" size="40" maxlength ="50">
-<br><br>
-5. Де у місті ви проводите свій вільний час? 
-<br>
-<select name="chas" multiple size="5">
-<option value="cat1">За комп'ютером</option>
-<option value="cat2">У дворі</option>
-<option value="cat3">На природі</option>
-<option value="cat4">Читаю книжки будь-де</option>
-<option value="cat5">У торговому центрі</option>
-</select>
-<br><br>
-6. Моє хоббі. 
-<br>
-<input type="checkbox" name="hobby" checked>Створення сайтів
-<br>
-<input type="checkbox" name="hobby" >Гра в онлайн-ігри
-<br>
-<input type="checkbox" name="hobby" >Спорт
-<br>
-<input type="checkbox" name="hobby" >Подорожі
-<br><br>
-<button onclick="alert('Дякуємо за заповнення анкети!')">Завантажити</button>
-</fieldset>
+    <br><br> 
+    2. Введіть Стать 
+    <br>
+    <input type="radio" name="pol" checked value="Ch">  Чол. 
+    <input type="radio" name="pol" value="J">  Жін.
+    <br><br>
+    3. Як ви добираєтеся до школи? 
+    <br>
+    <select name="doroga">
+      <option value="1d">Пішки</option>
+      <option value="2d">Автобус</option>
+      <option value="3d">Тролейбус</option>
+      <option value="4d">Маршрутка</option>
+      <option value="5d">Машина</option>
+    </select>
+    <br><br>
+    4. Який фільм в останній раз ви дивилися та у якому кінотеатрі?
+    (Введіть відповідь)
+    <br>
+    <input type="text" name="kino" size="40" maxlength ="50">
+    <br><br>
+    5. Де у місті ви проводите свій вільний час? 
+    <br>
+    <select name="chas" multiple size="5">
+      <option value="cat1">За комп'ютером</option>
+      <option value="cat2">У дворі</option>
+      <option value="cat3">На природі</option>
+      <option value="cat4">Читаю книжки будь-де</option>
+      <option value="cat5">У торговому центрі</option>
+    </select>
+    <br><br>
+    6. Моє хоббі. 
+    <br>
+    <input type="checkbox" name="hobby" checked>Створення сайтів
+    <br>
+    <input type="checkbox" name="hobby">Гра в онлайн-ігри
+    <br>
+    <input type="checkbox" name="hobby">Спорт
+    <br>
+    <input type="checkbox" name="hobby">Подорожі
+    <br><br>
+    <button type="submit">Завантажити</button>
+  </fieldset>
 </form>
-</div>
-<div class="menu">
-<a href="geografia.html">Географія й основні відомості</a>
-<a href="istoria.html">Історія</a>
-<a href="ekonomika.html">Економіка</a>
-<a href="social.html">Соціальна сфера і культура</a>
-<a href="personi.html">Персоналії, пов'язані з містом</a>
-<a href="anketa.html">Анкета</a>
-</div>
-	<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Находим форму по ее ID
-        var form = document.getElementById('anketa-form');
 
-        // Добавляем обработчик события отправки формы
-        form.addEventListener('submit', function(event) {
-            // Отменяем стандартное действие отправки формы
-            event.preventDefault();
-
-            // Получаем значения полей формы
-            var duration = form.elements['misto'].value;
-            var gender = form.elements['pol'].value;
-            var transportation = form.elements['doroga'].value;
-            var lastMovie = form.elements['kino'].value;
-            var leisureActivities = [];
-            for (var i = 0; i < form.elements['chas'].options.length; i++) {
-                if (form.elements['chas'].options[i].selected) {
-                    leisureActivities.push(form.elements['chas'].options[i].value);
-                }
-            }
-            var hobbies = [];
-            var checkboxes = form.elements['hobby'];
-            for (var i = 0; i < checkboxes.length; i++) {
-                if (checkboxes[i].checked) {
-                    hobbies.push(checkboxes[i].value);
-                }
-            }
-
-            // Создаем объект с данными пользователя
-            var userData = {
-                'duration': duration,
-                'gender': gender,
-                'transportation': transportation,
-                'lastMovie': lastMovie,
-                'leisureActivities': leisureActivities,
-                'hobbies': hobbies
-            };
-
-            // Выводим данные пользователя в консоль (здесь можно отправить данные на сервер)
-            console.log(userData);
-
-            // Можно также отправить данные на сервер с помощью AJAX-запроса
-
-            // Выводим сообщение благодарности
-            alert('Дякуємо за заповнення анкети!');
-        });
-    });
+<script>
+  function submitForm(event) {
+    event.preventDefault();
+    const formData = new FormData(event.target);
+    fetch('/', {
+      method: 'POST',
+      body: formData,
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+      alert('Дякуємо за заповнення анкети');
+      event.target.reset();
+    })
+    .catch(error => console.error('There has been a problem with your fetch operation:', error));
+  }
 </script>
 
 </body>
