--- a/anketa.html
+++ b/anketa.html
@@ -49,6 +49,14 @@
             </fieldset>
         </form>
     </div>
+    <div class="menu">
+<a href="geografia.html">Географія й основні відомості</a>
+<a href="istoria.html">Історія</a>
+<a href="ekonomika.html">Економіка</a>
+<a href="social.html">Соціальна сфера і культура</a>
+<a href="personi.html">Персоналії, пов'язані з містом</a>
+<a href="anketa.html">Анкета</a>
+</div>
 
     <script>
         function submitForm(event) {
