--- a/anketa.html
+++ b/anketa.html
@@ -10,7 +10,7 @@
     <img src="img/header.jpg" width="100%" class="header">
     <div id="fontextanketa">
         <h1>Анкета</h1><br>
-        <form name="anketa" method="POST" data-netlify="true" action="/your-netlify-form-url" onsubmit="submitForm(event)">
+        <form name="anketa" method="POST" data-netlify="true" action="https://app.netlify.com/sites/krasnograd/forms" onsubmit="submitForm(event)">
             <fieldset>
                 <legend>Місто та я</legend>
                 1. Чи давно ви живете в цьому місті?<br>
