--- a/anketa.html
+++ b/anketa.html
@@ -57,5 +57,6 @@
 <a href="personi.html">Персоналії, пов'язані з містом</a>
 <a href="anketa.html">Анкета</a>
 </div>
+     <script src="form.js"></script>
 </body>
 </html>
